Correct page alignment and guidelines bullet
Corrects the page alignments and guidelines bullet style that was earlier missing

--- a/project-abundance-design-system/project-abundance-design-system-website/pages/design-system-style.css
+++ b/project-abundance-design-system/project-abundance-design-system-website/pages/design-system-style.css
@@ -448,7 +448,7 @@ nav.clean {
             }
 
             article {
-                padding-right: 2%;
+                margin: auto;
             }
 
             .describing-item-card {
@@ -465,6 +465,14 @@ nav.clean {
             
             .demo-website {
                 width: 100%;
+            }
+
+            .describing-item-visualisation {
+                width: 100%;
+            }
+
+            .describing-item-guidelines ul {
+                list-style: disc;
             }
 
 
